Minimale hoogte van size selector verkleind

--- a/src/global/global.less
+++ b/src/global/global.less
@@ -406,6 +406,10 @@ u {
   padding: 5px 0;
 }
 
+.related-container .related.open .imageFrame {
+  min-height: 0 !important;
+}
+
 .related-container .related .imageFrame .size {
   display: none;
 }
