--- a/src/global/global.css
+++ b/src/global/global.css
@@ -367,6 +367,9 @@ u {
 .related-container .related.open .imageFrame .images {
   padding: 5px 0;
 }
+.related-container .related.open .imageFrame {
+  min-height: 0 !important;
+}
 .related-container .related .imageFrame .size {
   display: none;
 }
