Zoom functie op product images

--- a/src/global/global.css
+++ b/src/global/global.css
@@ -128,8 +128,12 @@ u {
 .maincontent.nomenu .main-column-right .product.detail .product-right .product-options .header {
   display: none;
 }
+.maincontent.nomenu .main-column-right .product.detail .product-right .product-options .footer {
+  display: none;
+}
 .maincontent.nomenu .main-column-right .product.detail .product-right .product-options .body {
-  border-style: solid solid;
+  border-top: 1px solid #D2CFCD;
+  box-shadow: none;
 }
 .maincontent #columns {
   display: table;
@@ -202,6 +206,7 @@ u {
   background: #fff;
   box-shadow: none!important;
   border: 1px solid #d5d5ce;
+  min-height: 300px!important;
 }
 .maincontent #columns .main-column-right .container .product:hover {
   border: 1px solid #707070;
@@ -248,7 +253,7 @@ u {
 }
 .maincontent #columns .main-column-right .container .product a .title {
   color: #5d5d5d;
-  height: 50px;
+  height: 40px;
 }
 .maincontent #columns .main-column-right .container a {
   display: inline-block;
@@ -256,8 +261,10 @@ u {
   margin-right: 15px;
 }
 .maincontent #columns .main-column-right .container a .path {
-  width: 405px;
+  width: 403px;
   height: 188px;
+  box-shadow: none;
+  border: 1px solid #D5D5CE;
 }
 .maincontent #columns .main-column-right .usercontent.below {
   margin-bottom: 50px;
@@ -321,6 +328,7 @@ u {
 .maincontent .menucontent nav ul li a {
   color: #7a7a7a;
   text-decoration: none;
+  display: block;
 }
 .maincontent .menucontent nav ul li a:hover {
   text-decoration: none;
@@ -349,6 +357,9 @@ u {
   margin-bottom: 20px;
   display: none;
   font-weight: normal;
+}
+.maincontent .menucontent nav > ul > li > span {
+  display: block;
 }
 .maincontent .menucontent nav > ul > li.show-menu {
   font-weight: bold;
@@ -676,6 +687,16 @@ u {
   margin: 0;
 }
 .product .title {
-  min-height: 70px !important;
+  min-height: 30px !important;
+}
+.product-image .imageFrame {
+  box-shadow: none!important;
+}
+/* ImageZoom plugin CSS */
+.easyzoom {
+  display: inline-block;
+}
+.easyzoom img {
+  vertical-align: bottom;
 }
 /*# sourceMappingURL=global.css.map */
