--- a/src/global/global.css
+++ b/src/global/global.css
@@ -692,11 +692,41 @@ u {
 .product-image .imageFrame {
   box-shadow: none!important;
 }
-/* ImageZoom plugin CSS */
 .easyzoom {
+  position: relative;
+  overflow: hidden;
+  /* 'Shrink-wrap' the element */
   display: inline-block;
+  *display: inline;
+  *zoom: 1;
 }
 .easyzoom img {
   vertical-align: bottom;
+}
+.easyzoom.is-loading img {
+  cursor: progress;
+}
+.easyzoom.is-ready img {
+  cursor: crosshair;
+}
+.easyzoom.is-error img {
+  cursor: not-allowed;
+}
+.easyzoom-notice {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 150;
+  width: 10em;
+  margin: -1em 0 0 -5em;
+  line-height: 2em;
+  text-align: center;
+  background: #FFF;
+  box-shadow: 0 0 10px #888;
+}
+.easyzoom-flyout {
+  position: absolute;
+  z-index: 100;
+  background: #FFF;
 }
 /*# sourceMappingURL=global.css.map */
