Product rechterkolom styling + teksten vertaald in Engels

--- a/src/global/global.less
+++ b/src/global/global.less
@@ -743,6 +743,11 @@ u {
     box-shadow: none!important;
 }
 
+.product-options .body .number {
+	background-color: #ea6b00!important;
+	border: 1px solid #d86200!important;
+}
+
 .easyzoom {
 	position: relative;
     overflow: hidden;
