--- a/src/global/global.css
+++ b/src/global/global.css
@@ -692,6 +692,10 @@ u {
 .product-image .imageFrame {
   box-shadow: none!important;
 }
+.product-options .body .number {
+  background-color: #ea6b00!important;
+  border: 1px solid #d86200!important;
+}
 .easyzoom {
   position: relative;
   overflow: hidden;
