--- a/src/global/global.css
+++ b/src/global/global.css
@@ -1,4 +1,8 @@
-﻿.site .column {
+﻿html,
+body {
+  width: 100%;
+}
+.site .column {
   width: 210px;
   display: table-cell;
   vertical-align: top;
@@ -699,11 +703,10 @@ u {
 #bottommenu {
   border-top: 1px solid #F69240;
   border-bottom: 1px solid #F69240;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
   height: 110px;
   padding: 15px 0;
   display: block;
-  background: linear-gradient(to bottom, #ffebda 0, #ffd2ad 62%, #ffbe87 100%);
+  background-color: #ffebda;
 }
 #bottommenu #footer_logo {
   background-image: url('c_logo.png');
@@ -718,9 +721,13 @@ u {
 #bottommenu nav {
   position: absolute;
   width: 100%;
+  margin-left: 80px;
 }
 #bottommenu nav ul {
   width: 1100px;
+  height: 120px;
+  overflow-y: hidden;
+  overflow-x: hidden;
   margin-left: auto;
   margin-right: auto;
   position: relative;
