--- a/src/global/global.less
+++ b/src/global/global.less
@@ -8,6 +8,10 @@
 @offset-default: 200px;
 
 //global
+html, body {
+	width: 100%;
+}
+
 .site {
     .column {
         width: @offset-default + @offset-base;
@@ -752,11 +756,10 @@ u {
 #bottommenu {
 	border-top: 1px solid #F69240;
 	border-bottom: 1px solid #F69240;
-	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
 	height: 110px;
 	padding: 15px 0;
 	display: block;
-	background: linear-gradient(to bottom, #ffebda 0,#ffd2ad 62%,#ffbe87 100%);
+	background-color: #ffebda;
 
 	#footer_logo {
 		background-image: url('c_logo.png');
@@ -772,8 +775,12 @@ u {
 	nav {
 		position: absolute;
 		width: 100%;
+		margin-left: 80px;
 		ul {
 			width: 1100px;
+			height: 120px;
+			overflow-y: hidden;
+			overflow-x: hidden;
 			margin-left: auto;
 			margin-right: auto;
 			position: relative;
