--- a/src/global/global.css
+++ b/src/global/global.css
@@ -703,6 +703,7 @@ u {
 #bottommenu {
   border-top: 1px solid #F69240;
   border-bottom: 1px solid #F69240;
+  min-width: 1100px;
   height: 110px;
   padding: 15px 0;
   display: block;
@@ -721,16 +722,18 @@ u {
 #bottommenu nav {
   position: absolute;
   width: 100%;
-  margin-left: 80px;
 }
 #bottommenu nav ul {
-  width: 1100px;
+  width: 1000px;
   height: 120px;
   overflow-y: hidden;
   overflow-x: hidden;
   margin-left: auto;
   margin-right: auto;
   position: relative;
+}
+#bottommenu nav > ul {
+  padding-left: 100px;
 }
 #bottommenu nav > ul > li {
   font-size: 12px;
