--- a/src/global/global.less
+++ b/src/global/global.less
@@ -756,6 +756,7 @@ u {
 #bottommenu {
 	border-top: 1px solid #F69240;
 	border-bottom: 1px solid #F69240;
+	min-width: 1100px;
 	height: 110px;
 	padding: 15px 0;
 	display: block;
@@ -775,9 +776,8 @@ u {
 	nav {
 		position: absolute;
 		width: 100%;
-		margin-left: 80px;
 		ul {
-			width: 1100px;
+			width: 1000px;
 			height: 120px;
 			overflow-y: hidden;
 			overflow-x: hidden;
@@ -785,6 +785,10 @@ u {
 			margin-right: auto;
 			position: relative;
 		}
+	}
+
+	nav > ul {
+		padding-left: 100px;
 	}
 
 	nav > ul > li {
