--- a/src/global/global.css
+++ b/src/global/global.css
@@ -704,7 +704,7 @@ u {
   border-top: 1px solid #F69240;
   border-bottom: 1px solid #F69240;
   min-width: 1100px;
-  height: 110px;
+  height: 140px;
   padding: 15px 0;
   display: block;
   background-color: #ffebda;
@@ -724,7 +724,7 @@ u {
   width: 100%;
 }
 #bottommenu nav ul {
-  width: 1000px;
+  width: 1050px;
   height: 120px;
   overflow-y: hidden;
   overflow-x: hidden;
@@ -733,13 +733,13 @@ u {
   position: relative;
 }
 #bottommenu nav > ul {
-  padding-left: 100px;
+  padding-left: 25px;
 }
 #bottommenu nav > ul > li {
   font-size: 12px;
   float: left;
   height: 100px;
-  width: 200px;
+  width: 210px;
   display: inline-block;
 }
 #bottommenu nav > ul > li a {
@@ -757,9 +757,29 @@ u {
   font-size: 14px;
   text-decoration: none;
 }
+#bottommenu #facebook a {
+  display: block;
+  float: left;
+  width: 50px;
+  height: 50px;
+  background-image: url('//colori.azurewebsites.net/resources/social/facebook-button.png');
+}
+#bottommenu #instagram a {
+  display: block;
+  float: left;
+  width: 50px;
+  height: 50px;
+  background-image: url('//colori.azurewebsites.net/resources/social/instagram-button.png');
+}
 #bottommenu2 {
-  padding: 20px 150px;
+  padding: 20px 0;
   height: 75px;
+}
+#bottommenu2 nav {
+  width: 1060px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
 }
 #bottommenu2 nav ul {
   float: right;
