--- a/src/global/global.less
+++ b/src/global/global.less
@@ -757,7 +757,7 @@ u {
 	border-top: 1px solid #F69240;
 	border-bottom: 1px solid #F69240;
 	min-width: 1100px;
-	height: 110px;
+	height: 140px;
 	padding: 15px 0;
 	display: block;
 	background-color: #ffebda;
@@ -777,7 +777,7 @@ u {
 		position: absolute;
 		width: 100%;
 		ul {
-			width: 1000px;
+			width: 1050px;
 			height: 120px;
 			overflow-y: hidden;
 			overflow-x: hidden;
@@ -788,14 +788,14 @@ u {
 	}
 
 	nav > ul {
-		padding-left: 100px;
+		padding-left: 25px;
 	}
 
 	nav > ul > li {
 		font-size: 12px;
 		float: left;
 		height: 100px;
-		width: 200px;
+		width: 210px;
 		display: inline-block;
 		a {
 			text-decoration: none;
@@ -814,11 +814,34 @@ u {
 			}
 		}
 	}
+
+	#facebook a {
+		display: block;
+		float: left;
+		width: 50px;
+		height: 50px;
+		background-image: url('//colori.azurewebsites.net/resources/social/facebook-button.png');
+	}
+	#instagram a {
+		display: block;
+		float: left;
+		width: 50px;
+		height: 50px;
+		background-image: url('//colori.azurewebsites.net/resources/social/instagram-button.png');
+	}
 }
 
 #bottommenu2 {
-	padding: 20px 150px;
+	padding: 20px 0;
 	height: 75px;
+	
+	nav {
+		width: 1060px;
+		margin-left: auto;
+		margin-right: auto;
+		position: relative;
+	}
+
 	nav ul {
 		float: right;
 	}
@@ -828,6 +851,8 @@ u {
 		float: left;
 		height: 20px;
 	}
+
+
 }
 
 // CSS for image-zoom in product page
