--- a/src/global/global.css
+++ b/src/global/global.css
@@ -758,17 +758,19 @@ u {
   text-decoration: none;
 }
 #bottommenu #facebook a {
+  margin-right: 10px;
   display: block;
   float: left;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   background-image: url('//colori.azurewebsites.net/resources/social/facebook-button.png');
 }
 #bottommenu #instagram a {
+  margin-right: 10px;
   display: block;
   float: left;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   background-image: url('//colori.azurewebsites.net/resources/social/instagram-button.png');
 }
 #bottommenu2 {
