--- a/src/global/global.less
+++ b/src/global/global.less
@@ -816,17 +816,19 @@ u {
 	}
 
 	#facebook a {
+		margin-right: 10px;
 		display: block;
 		float: left;
-		width: 50px;
-		height: 50px;
+		width: 40px;
+		height: 40px;
 		background-image: url('//colori.azurewebsites.net/resources/social/facebook-button.png');
 	}
 	#instagram a {
+		margin-right: 10px;
 		display: block;
 		float: left;
-		width: 50px;
-		height: 50px;
+		width: 40px;
+		height: 40px;
 		background-image: url('//colori.azurewebsites.net/resources/social/instagram-button.png');
 	}
 }
