--- a/src/global/global.less
+++ b/src/global/global.less
@@ -148,7 +148,7 @@ u {
     min-height: 500px;
 }
 .maincontent.nomenu {
-    text-decoration: underline;
+    /*text-decoration: underline;*/
 }
 .maincontent.nomenu .main-column-left {
     display: none !important;
