--- a/src/global/global.css
+++ b/src/global/global.css
@@ -800,8 +800,396 @@ u {
   display: inline-block;
   float: left;
   height: 50px;
-  width: 200px;
+  width: 210px;
   background-image: url('//colori.azurewebsites.net/resources/payment.jpg');
+}
+.product {
+  margin-top: 20px;
+}
+.product .product-left {
+  width: 600px;
+  float: left;
+}
+.product .product-right {
+  margin-left: 26px;
+  float: left;
+  clear: right;
+}
+.product-image {
+  display: inline-block;
+  vertical-align: top;
+}
+.product-image .imageFrame {
+  width: 400px;
+  min-height: 280px;
+  box-shadow: 0 0 4px rgba(122, 122, 122, 0.5);
+}
+.product-options {
+  width: 399px;
+  display: inline-block;
+}
+.product-options .header {
+  background-image: url('//hybridsaasblob.blob.core.windows.net/aspekto-public/website/pages/product-detail/personaliseer.png');
+  width: 399px;
+  height: 51px;
+}
+.product-options .body {
+  width: 363px;
+  border: solid 1px #D2CFCD;
+  border-top: none;
+  margin-left: 7px;
+  background-color: #EFEBE8;
+  box-shadow: 0 2px 4px rgba(92, 92, 92, 0.25);
+  padding: 10px;
+  padding-bottom: 20px;
+  color: #565656;
+}
+.product-options .body .intro .description {
+  font-weight: bold;
+}
+.product-options .body .intro .option-header {
+  margin-top: 10px;
+  font-weight: bold;
+}
+.product-options .body .item {
+  padding-left: 50px;
+}
+.product-options .body .number {
+  position: relative;
+  margin-top: -10px;
+  display: inline-block;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid 1px #b33fb2;
+  background-color: #8F328E;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  padding-top: 1px;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+.product-options .body .input-item {
+  margin-top: 15px;
+  padding-left: 50px;
+}
+.product-options .body .number-item {
+  vertical-align: top;
+  margin-left: 18px;
+  display: inline-block;
+  padding-top: 4px;
+}
+.product-options .body .number-item input[type=text] {
+  width: 300px;
+  border: solid 1px #7D7D7F;
+  height: 25px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.14);
+  font-size: 12px;
+  padding-left: 5px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.product-options .body .number-item textarea {
+  font-size: 12px;
+  padding-left: 5px;
+  width: 300px;
+  height: 80px;
+  border: solid 1px #7D7D7F;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.14);
+}
+.product-options .body .number-item select {
+  width: 300px;
+  border: solid 1px #7D7D7F;
+  height: 25px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.14);
+  font-size: 12px;
+  padding-left: 5px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.product-options .body .number-item .cart-button {
+  background-image: url('//hybridsaasblob.blob.core.windows.net/aspekto-public/website/images/cart/cart-white.svg');
+  background-size: 34px 28px;
+  background-repeat: no-repeat;
+  background-position: 230px;
+  width: 300px;
+  border: outset 1px #7D7D7F;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 10px;
+  padding-top: 12px;
+  padding-right: 40px;
+  color: white;
+  background-color: #008200;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.14);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  outline: none;
+}
+.product-options .body .number-item .cart-button:hover {
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+}
+.product-options .body .number-item .cart-button:active {
+  padding-top: 13px;
+  padding-bottom: 9px;
+  padding-right: 38px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.34);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  background-position: 231px 8px;
+}
+.product-options .footer {
+  height: 42px;
+  width: 386px;
+  background-image: url('//hybridsaasblob.blob.core.windows.net/aspekto-public/website/pages/product-detail/personaliseer-onder.png');
+  margin-left: 7px;
+  margin-bottom: 20px;
+}
+.product-image-rest {
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+  width: 165px;
+  margin-left: 10px;
+  min-height: 122.5px;
+  text-align: center;
+  margin-bottom: 8px;
+  border: solid 1px #7A7A7A;
+  border-radius: 0.75em;
+  box-shadow: 0 0 4px rgba(122, 122, 122, 0.5);
+  background-color: #F6F4F3;
+}
+.product-image-rest:before {
+  background-color: #F6F4F3;
+  border-left: solid 1px #7A7A7A;
+  border-bottom: solid 1px #7A7A7A;
+  content: "\00a0";
+  display: block;
+  height: 10px;
+  left: -6px;
+  position: relative;
+  top: 20px;
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  width: 10px;
+}
+.product-image-rest .header {
+  font-weight: bold;
+  color: #565656;
+  margin-top: 10px;
+  margin-bottom: 17px;
+}
+.product-image-rest .imageFrame {
+  width: 135px;
+  min-height: 100px;
+  margin: auto;
+  border: dotted 1px #C9C8C8;
+  background-color: white;
+  margin-bottom: 10px;
+  cursor: pointer;
+  opacity: 0.6;
+}
+.product-image-rest .imageFrame:hover {
+  border: solid 1px #C9C8C8;
+  opacity: 1;
+}
+.product-image-rest .imageFrame.active {
+  border: solid 1px gray;
+  opacity: 0.7;
+}
+.product-detail {
+  margin-top: 20px;
+  font-size: 12px;
+  display: inline-block;
+  vertical-align: top;
+}
+.product-detail .header {
+  font-weight: bold;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
+  color: #565656;
+  opacity: 1;
+  border-bottom: solid 2px #622694;
+  padding-bottom: 5px;
+  margin-bottom: 8px;
+  margin-right: 15px;
+}
+.product-detail .description {
+  padding-bottom: 5px;
+  font-weight: bold;
+}
+.top-description {
+  font-weight: bold;
+  font-size: 18px;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
+  color: #565656;
+  opacity: 1;
+  border-bottom: solid 2px #622694;
+  padding-bottom: 5px;
+  margin-bottom: 8px;
+  margin-right: 15px;
+}
+.label {
+  width: 120px;
+  display: inline-block;
+  vertical-align: top;
+}
+.value {
+  display: inline-block;
+}
+.value.price {
+  font-weight: bold;
+  color: green;
+}
+.value.price .symbol {
+  font-weight: normal;
+}
+.sheet {
+  margin-top: 10px;
+  color: gray;
+  font-size: 10px;
+  cursor: pointer;
+}
+.input-extension {
+  margin-top: 10px;
+}
+.input-remark {
+  margin-top: 10px;
+  display: inline-block;
+  color: gray;
+  font-size: 11px;
+  margin-left: 4px;
+}
+.input {
+  margin-top: 2px;
+}
+.missing {
+  background-color: #FFCCCC;
+  border-color: red;
+}
+.imageFrame {
+  text-align: center;
+  margin-bottom: 8px;
+  border: solid 1px #7A7A7A;
+  border-radius: 0.75em;
+}
+.imageFrame img {
+  border-radius: 0.75em;
+}
+.header-custom {
+  color: gray;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  font-style: italic;
+}
+.input-submit {
+  margin-left: 122px;
+  margin-top: 2px;
+}
+.input-submit button {
+  border-radius: 0px 0px 8px 0px;
+}
+textarea.input {
+  border: solid 1px steelblue;
+  background-color: #ffd;
+  border-radius: 2px;
+  font-size: 12px;
+  padding: 4px;
+  color: #333;
+}
+#remark {
+  width: 300px;
+  height: 100px;
+}
+.details {
+  vertical-align: top;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 595px;
+}
+#extension .input-pulldown {
+  width: 130px;
+}
+#disqus_thread {
+  margin-right: 10px;
+  width: 400px;
+  margin-top: 20px;
+}
+.related-container .related {
+  border: solid 1px #D2CFCD;
+  background-color: #EFEBE8;
+  width: 187px;
+  height: 45px;
+  -moz-transition: height 0.25s;
+  -o-transition: height 0.25s;
+  -webkit-transition: height 0.25s;
+  transition: height 0.25s;
+  margin-left: 6px;
+  float: left;
+  border-radius: 0.75em;
+  margin-bottom: 10px;
+  box-shadow: 0 0 4px rgba(122, 122, 122, 0.5);
+  cursor: pointer;
+}
+.related-container .related.open {
+  cursor: default;
+  height: 160px;
+}
+.related-container .related.open .imageFrame {
+  border: solid 1px #666;
+  box-shadow: 4px 4px 4px rgba(122, 122, 122, 0.5);
+  z-index: 101;
+  min-height: 138px;
+  padding-bottom: 0;
+}
+.related-container .related.open .imageFrame img {
+  display: block !important;
+}
+.related-container .related.open .imageFrame img:hover {
+  border: dotted 1px #8c3292;
+}
+.related-container .related.open .imageFrame .label {
+  color: #8c3292;
+}
+.related-container .related .imageFrame {
+  position: relative;
+  z-index: 100;
+  vertical-align: top;
+  width: 167px;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  border: dotted 1px #C9C8C8;
+  border-radius: 0.75em;
+  background-color: white;
+  padding-bottom: 4px;
+}
+.related-container .related .imageFrame:hover {
+  border-color: #333;
+}
+.related-container .related .imageFrame img {
+  border: solid 1px white;
+  cursor: pointer;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: none;
+}
+.related-container .related .imageFrame .label {
+  font-weight: bold;
+  color: #565656;
+  font-size: 12px;
+  white-space: nowrap;
+  margin-top: 5px;
 }
 .easyzoom {
   position: relative;
@@ -867,5 +1255,422 @@ u {
 }
 #popClose {
   float: right;
+}
+/* =============================================================================
+   HTML5 Boilerplate CSS: h5bp.com/css
+   ========================================================================== */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section {
+  display: block;
+}
+audio,
+canvas,
+video {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+}
+audio:not([controls]) {
+  display: none;
+}
+[hidden] {
+  display: none;
+}
+html {
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+html,
+button,
+input,
+select,
+textarea {
+  font-family: sans-serif;
+  color: #222;
+}
+body {
+  margin: 0;
+  font-size: 1em;
+  line-height: 1.4;
+  cursor: default;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.selectable {
+  -moz-user-select: text;
+  -khtml-user-select: text;
+  -webkit-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+.not-selectable {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+::-moz-selection {
+  background: darkorange;
+  color: #fff;
+  -webkit-text-shadow: none;
+  text-shadow: none;
+}
+::selection {
+  background: darkorange;
+  color: #fff;
+  -webkit-text-shadow: none;
+  text-shadow: none;
+}
+a {
+  color: darkorange;
+}
+a:visited {
+  color: #551a8b;
+}
+a:hover {
+  color: #06e;
+}
+a:focus {
+  outline: thin dotted;
+}
+a:hover,
+a:active {
+  outline: 0;
+}
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+b,
+strong {
+  font-weight: bold;
+}
+blockquote {
+  margin: 1em 40px;
+}
+dfn {
+  font-style: italic;
+}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
+ins {
+  background: #ff9;
+  color: #000;
+  text-decoration: none;
+}
+mark {
+  background: #ff0;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+pre,
+code,
+kbd,
+samp {
+  font-family: monospace, serif;
+  _font-family: 'courier new', monospace;
+  font-size: 1em;
+}
+pre {
+  white-space: pre;
+  white-space: pre-wrap;
+  -ms-word-wrap: break-word;
+  word-wrap: break-word;
+}
+q {
+  quotes: none;
+}
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+small {
+  font-size: 85%;
+}
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sup {
+  top: -0.5em;
+}
+sub {
+  bottom: -0.25em;
+}
+ul,
+ol {
+  margin: 1em 0;
+  padding: 0 0 0 40px;
+}
+dd {
+  margin: 0 0 0 40px;
+}
+nav ul,
+nav ol {
+  list-style: none;
+  list-style-image: none;
+  margin: 0;
+  padding: 0;
+}
+img {
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+  vertical-align: middle;
+}
+svg:not(:root) {
+  overflow: hidden;
+}
+figure {
+  margin: 0;
+}
+form {
+  margin: 0;
+}
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+label {
+  cursor: pointer;
+}
+legend {
+  border: 0;
+  *margin-left: -7px;
+  padding: 0;
+  white-space: normal;
+}
+button,
+input,
+select,
+textarea {
+  font-size: 100%;
+  margin: 0;
+  vertical-align: baseline;
+  *vertical-align: middle;
+}
+button,
+input {
+  line-height: normal;
+}
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  cursor: pointer;
+  -webkit-appearance: button;
+  *overflow: visible;
+}
+button[disabled],
+input[disabled] {
+  cursor: default;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  *width: 13px;
+  *height: 13px;
+}
+input[type="search"] {
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+textarea {
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
+}
+input:invalid,
+textarea:invalid {
+  background-color: #f0dddd;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+td {
+  vertical-align: top;
+}
+.chromeframe {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: black;
+  padding: 0.2em 0;
+}
+/* =============================================================================
+   Media Queries
+   ========================================================================== */
+@media only screen and (min-width: 35em) {
+  /* Style adjustments for viewports that meet the condition */
+}
+/* =============================================================================
+   Non-Semantic Helper Classes
+   ========================================================================== */
+.ir {
+  display: block;
+  border: 0;
+  text-indent: -999em;
+  overflow: hidden;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  text-align: left;
+  direction: ltr;
+  *line-height: 0;
+}
+.ir br {
+  display: none;
+}
+.hidden {
+  display: none !important;
+  visibility: hidden;
+}
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
+}
+.invisible {
+  visibility: hidden;
+}
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+.clearfix:after {
+  clear: both;
+}
+.clearfix {
+  *zoom: 1;
+}
+/* =============================================================================
+   Print Styles
+   ========================================================================== */
+@media print {
+  * {
+    background: transparent !important;
+    color: black !important;
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    -webkit-text-shadow: none !important;
+    text-shadow: none !important;
+    filter: none !important;
+    -ms-filter: none !important;
+  }
+  /* Black prints faster: h5bp.com/s */
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
+  a[href]:after {
+    content: " (" attr(href) ")";
+  }
+  abbr[title]:after {
+    content: " (" attr(title) ")";
+  }
+  .ir a:after,
+  a[href^="javascript:"]:after,
+  a[href^="#"]:after {
+    content: "";
+  }
+  /* Don't show links for images, or javascript/internal links */
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
+  thead {
+    display: table-header-group;
+  }
+  /* h5bp.com/t */
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
+  img {
+    max-width: 100% !important;
+  }
+  @page {
+    margin: 0.5cm;
+  }
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
+}
+/* =============================================================================
+   General Classes
+   ========================================================================== */
+.vMiddle {
+  vertical-align: middle;
+}
+.vMiddle td {
+  vertical-align: middle;
+}
+#main {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 /*# sourceMappingURL=global.css.map */
