--- a/src/global/global.less
+++ b/src/global/global.less
@@ -257,6 +257,7 @@ u {
     font-size: 22px;
     margin-top: 10px;
     height: 30px;
+	text-decoration:line-through;
 }
 .maincontent #columns .main-column-right .container .product .price {
     color: #63248f;
