--- a/src/global/global.css
+++ b/src/global/global.css
@@ -226,6 +226,7 @@ u {
   font-size: 22px;
   margin-top: 10px;
   height: 30px;
+  text-decoration: line-through;
 }
 .maincontent #columns .main-column-right .container .product .price {
   color: #63248f;
