--- a/src/global/global.css
+++ b/src/global/global.css
@@ -129,14 +129,6 @@ u {
   padding-left: 20px !important;
   width: 1040px !important;
 }
-
-.no-more-order .product-right {
-  display: none;
-}
-.no-more-order .buyButton {
-  display: none;
-}
-
 .maincontent.nomenu .main-column-right .product.detail .product-right .product-options .header {
   display: none;
 }
@@ -227,24 +219,12 @@ u {
 .maincontent #columns .main-column-right .container .product .number {
   display: none;
 }
-
-.product-options .originalPrice {
-  font-weight: bold;
-  color: red;
-  font-size: 12px;
-  margin-top: -18px;
-  margin-left: 165px;
-  height: 30px;
-  text-decoration: line-through;
-}
-
-
 .maincontent #columns .main-column-right .container .product .originalPrice {
-  color: red;
+  color: #63248f;
   text-align: right;
   font-weight: bold;
   font-size: 22px;
-  margin-top: -60px;
+  margin-top: 10px;
   height: 30px;
   text-decoration: line-through;
 }
@@ -1112,6 +1092,7 @@ u {
 }
 .imageFrame img {
   border-radius: 0.75em;
+  width: 185px;
 }
 .header-custom {
   color: gray;
@@ -1688,7 +1669,6 @@ td {
 /* =============================================================================
    General Classes
    ========================================================================== */
-
 .vMiddle {
   vertical-align: middle;
 }
@@ -1703,5 +1683,4 @@ td {
   height: 100%;
   overflow: auto;
 }
-
 /*# sourceMappingURL=global.css.map */
